Fix z-index values (#460)
* Fix z-index values

* Bump patch version

--- a/common/abstracts/_variables.scss
+++ b/common/abstracts/_variables.scss
@@ -45,4 +45,5 @@ $topic-card-big-width: 18.75rem;
 $default-z-index: 1;
 $fav-language-selector-z-index: $default-z-index + 1;
 $outline-z-index: $default-z-index + 1;
-$header-z-index: $default-z-index + 2;
+$language-favorites-z-index: $outline-z-index + 1;
+$header-z-index: $language-favorites-z-index + 1;
